# include_data_uri

./: .editorconfig  Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/test_cases/jpeg/: naw.base64
tests/: macro.rs
